@@ -1,36 +1,25 @@
-#include <mpi.h>
+#ifndef MUSIC_HH
 
-namespace MUSIC
-{
+/*
+ *  This file is part of MUSIC.
+ *  Copyright (C) 2007 CSC, KTH
+ *
+ *  MUSIC is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 3 of the License, or
+ *  (at your option) any later version.
+ *
+ *  MUSIC is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
 
-  setup
-  init (int color, int* argc, char** argv[]);
+#include "music/runtime.hh"
+#include "music/setup.hh"
 
-  class setup
-  {
-    void
-    declare (double* data, int count, char* name);
-
-    void
-    import (int peer, char* name);
-
-    void
-    export (int peer, char* name);
-
-    runtime
-    done ();
-  };
-
-  class runtime
-  {
-    MPI_Comm
-    communicator ();
-
-    void
-    finalize ();
-
-    void
-    tick (double time);
-  }
-
-}
+#define MUSIC_HH
+#endif /* MUSIC_HH */
